--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,14 @@
+<h1>Team Name: <%= @team_name %> </h1>
+<h2>Team Motto: <%= @team_motto %></h2><br>
+
+<% @team_members.each_with_index do |member, index| %>
+      <h2> Hero Name: <%= @hero_name[index] %> </h2><br>
+      <p>
+      Hero Power: <%= @hero_power[index] %> <br>
+      Hero Biography: <%= @hero_bio[index] %> <br>
+      </p>
+
+<% end %>
 
 
 
